5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1785_1594.log
== TEST (2019-05-30 10:06:09) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: "))
i = 0 #cont laco
f = 1 #peso 
j = 0 #acumulador de danos
while(i < size(vd)):
	i = i + 1
print(vd)

-- ERROR:
File "XXXX", line 4
    i = 0 #cont laco
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:06:17) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: "))
i = 0  #cont laco
f = 1   #peso 
j = 0  #acumulador de danos
while(i < size(vd)):
	i = i + 1
print(vd)

-- ERROR:
File "XXXX", line 4
    i = 0  #cont laco
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:06:27) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: "))
i = 0  
f = 1   #peso 
j = 0  #acumulador de danos
while(i < size(vd)):
	i = i + 1
print(vd)

-- ERROR:
File "XXXX", line 4
    i = 0  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:06:33) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: "))

			  i = 0  
f = 1   #peso 
j = 0  #acumulador de danos
while(i < size(vd)):
	i = i + 1
print(vd)

-- ERROR:
File "XXXX", line 5
    i = 0  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:06:36) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: "))

i = 0  
f = 1   #peso 
j = 0  #acumulador de danos
while(i < size(vd)):
	i = i + 1
print(vd)

-- ERROR:
File "XXXX", line 5
    i = 0  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:06:55) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: "))


while(i < size(vd)):
	i = i + 1
print(vd)

-- ERROR:
File "XXXX", line 6
    while(i < size(vd)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:07:03) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: "))

i = 0
while(i < size(vd)):
	i = i + 1
print(vd)

-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:07:15) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: "))


print(vd)

-- ERROR:
File "XXXX", line 6
    print(vd)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:07:27) 
-- CODE:
from numpy import *
#vetor de danos
v = array(eval(input("Vetor de danos: "))


print(vd)

-- ERROR:
File "XXXX", line 6
    print(vd)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:07:37) 
-- CODE:
from numpy import *
#vetor de danos
v = array(eval(input("Vetor de danos: "))


print(vd)

-- ERROR:
File "XXXX", line 6
    print(vd)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:07:42) 
-- CODE:
from numpy import *
#vetor de danos
v = array(eval(input("Vetor de danos: "))


print(v)

-- ERROR:
File "XXXX", line 6
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:07:55) 
-- CODE:
from numpy import *
#vetor de danos
v = array(eval(input("Vetor de danos: "))


print([v])

-- ERROR:
File "XXXX", line 6
    print([v])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:09:51) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: "))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0 
while(i < size(vd)):

-- ERROR:
File "XXXX", line 7
    i = 0 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:10:24) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: "))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0 
while(i < size(vd)):

-- ERROR:
File "XXXX", line 7
    i = 0 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:10:27) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0 
while(i < size(vd)):

-- ERROR:
File "XXXX", line 9
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:10:33) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:11:02) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0 
while(i > size(vd)):

-- ERROR:
File "XXXX", line 9
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:12:54) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco
f = 1 #peso
soma = 0

while(i > size(vd)):
	i = i + 1
	f = f + 1
	soma = soma + 1
print(vd)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:13:53) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco
f = 1 #peso
soma = 0

while(i > size(vd)):
	i = i + 1
	f = f + 1
	soma = soma + 1
x = sum(vd)
print(x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:14:29) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco
f = 1 #peso
soma = 0

while(i > size(vd)):
	i = i + 1
	f = f + 1
	soma = soma + 1 + f
x = sum(vd)


print(x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:14:46) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco
f = 1 #peso
soma = 0

while(i > size(vd)):
	i = i + 1
	f = f + 1
	soma = soma + 1 + f
x = sum(vd)


print(soma)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:17:29) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)

while(i > size(vd)):
	v[i]=v[i] + v[i]*f
	i = i + 1
	f = f + 1
	
	soma = soma + 1 + f

x = sum(vd)


print(soma)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:17:48) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)

while(i > size(vd)):
	v[i]=v[i] + v[i]*f
	i = i + 1
	f = f + 1

x = sum(vd)


print(v)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:17:58) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)

while(i > size(vd)):
	v[i]=v[i] + v[i]*f
	i = i + 1
	f = f + 1

x = sum(vd)


print(vd)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:18:34) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)

while(i > size(vd)):
	v[i]=v[i] + v[i]*f
	i = i + 1
	f = f + 1
	soma  = soma + 1 

print()
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:18:41) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)

while(i > size(vd)):
	v[i]=v[i] + v[i]*f
	i = i + 1
	f = f + 1
	soma  = soma + 1 

print(v)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:18:53) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)

while(i > size(vd)):
	v[i]=v[i] + v[i]*f
	i = i + 1
	f = f + 1
	soma  = soma + 1 

print(vd)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:19:59) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)

while(i > size(vd)):
	i = i + 1
	f = f + 1
	v[i] = v[i] + v[i]*f
	soma  = soma + 1 

print(vd)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:20:29) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)

while(i > size(vd)):
	i = i + 1
	f = f + 1
	v[i] = v[i+1] + v[i]*f
	soma  = soma + 1 

print(vd)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:20:48) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)

while(i > size(vd)):
	i = i + 1
	f = f + 1
	v[i] = v[i+1] + v[i]*f
	soma  = soma + 1 
print(sum(vd))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:21:43) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)

while(i > size(vd)):
	i = i + 1
	f = f + 1
	v[i] = v[i+1] + v[i]*f
	soma  = soma + 1 
v = zeros(soma,dtype=int)
h= 0
u =0

print(sum(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:22:24) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)

while(i > size(vd)):
	i = i + 1
	f = f + 1
	v[i] = v[i+1] + v[i]*f
	soma  = soma + 1 


	print(sum(vd))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:24:04) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
dt=sum(vt)
va= va[i] + va[f]*f


#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)

while(i > size(vd)):
	i = i + 1
	f = f + 1
	v[i] = v[i+1] + v[i]*f
	soma  = soma + 1 


	print(sum(vd))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:24:30) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
dt=sum(vd)
va= va[i] + va[f]*f


#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)

while(i > size(vd)):
	i = i + 1
	f = f + 1
	v[i] = v[i+1] + v[i]*f
	soma  = soma + 1 


	print(sum(vd))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:24:51) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
dt=sum(vd)
vd= vd[i] + vd[f]*f


#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)

while(i > size(vd)):
	i = i + 1
	f = f + 1
	v[i] = v[i+1] + v[i]*f
	soma  = soma + 1 


	print(sum(vd))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:25:13) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
dt=sum(vd)
vd= vd[i] + vd[f]*f

print(sum(vd))
#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)

while(i > size(vd)):
	i = i + 1
	f = f + 1
	v[i] = v[i+1] + v[i]*f
	soma  = soma + 1 


	print(sum(vd))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:25:39) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
dt=sum(vd)
vd= vd[i] + vd[f]*f

print(sum(vd))
#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:25:59) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
dt=sum(vd)
vd= vd[i] + vd[f]*f

print(sum(dt))

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:26:12) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
dt=sum(vd)
h= vd[i] + vd[f]*f

print(sum(dt))

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:26:30) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
dt=sum(vd)
h= vd[i] + vd[f]*f

print(sum(dt))

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:27:25) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i +1
	f = f + 1

dt=sum(vd)
h= vd[i] + vd[f]*f

print(sum(dt))

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:27:45) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i +1
	f = f + 1

	dt=sum(vd)
	h= vd[i] + vd[f]*f

print(sum(dt))

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:27:56) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i +1
	f = f + 1

	dt=sum(vd)
	h= vd[i] + vd[f]*f

print(sum(h))

#v[0]=v[1]*peso
#v[1] = v[2] * (peso+1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:29:20) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i +1
	f = f + 1
	soma=soma+1
dt=sum(vd)
h= vd[i] + vd[f]*f

print(sum(h))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:29:27) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i +1
	f = f + 1
	soma=soma+1
dt=sum(vd)
h= vd[i] + vd[f]*f

print(soma))


-- ERROR:
File "XXXX", line 17
    print(soma))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:29:31) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i +1
	f = f + 1
	soma=soma+1
dt=sum(vd)
h= vd[i] + vd[f]*f

print(soma)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:29:48) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i +1
	f = f + 1
	soma=soma+1
dt=sum(vd)


print(soma)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:40:48) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i +1
	f = f + vd[i]*f
	soma=soma+1

dt=sum(vd)


print(soma)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:45:22) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1
# v[i] = v[i] + (f+1)
i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i + 1
	f = f + 1
	soma=soma+1
	dx = vd*f 



print(dc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:45:26) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1
# v[i] = v[i] + (f+1)
i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i + 1
	f = f + 1
	soma=soma+1
	dx = vd*f 



print(dx)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:46:02) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1
# v[i] = v[i] + (f+1)
i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i + 1
	f = f + 1
	soma=soma+1
	dx = vd*f 

y=sum(dx)

print(y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:46:21) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1
# v[i] = v[i] + (f+1)
i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i + 1
	f = f + 1
	soma=soma+1
	dx = vd[i]*f 

y=sum(dx)

print(y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:46:46) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1
# v[i] = v[i] + (f+1)
i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i + 1
	f = f + 1
	soma=soma+1
dx = vd[i]*f 

y=sum(dx)

print(y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:47:08) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1
v[i] = v[i] + (f+1)
i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i + 1
	f = f + 1
	soma=soma+1


y=sum(dx)

print(y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:47:40) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1
v[i] = v[i] + (f+1)
i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i + 1
	f = f + 1
	soma=soma+1
w = i*f

y=sum(w)

print(y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:48:26) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i + 1
	f = f + 1
	soma=soma+1
	w = v[i] + v[f] * f

y=sum(w)

print(y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:48:43) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 1 #peso
soma = 0
while(i<size(vd)):
	i = i + 1
	f = f + 1
	soma=soma+1
	w = vd[i] + vd[f] * f

y=sum(w)

print(y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:50:31) 
-- CODE:
from numpy import *
#vetor de danos
vd = array(eval(input("Vetor de danos: ")))
#ataque 1 = v[0]*1
#ataque 2 = v[i] + 1

i = 0  #cont laco posicao
f = 0 #peso
soma = 0
while(i<size(vd)):
	i = i + 1
	f = f + 1
	soma=soma+1
	w = vd[i] + vd[i] * f

y=sum(w)

print(y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
